--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-  <link rel="stylesheet" href="/css/lightbox.min.css">
-  <link rel="stylesheet" href="/css/utilities.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/lightbox.min.css">
+  <link rel="stylesheet" href="../css/utilities.css">
+  <link rel="stylesheet" href="../css/style.css">
     <!-- Title  -->
   <title>Welcome To EdgeLedger</title>
 </head>
